and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

   Please keep a summary of these message in geometry/History!

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

 March 3, 2015  G.Cosmo                  geom-bool-V10-00-10
 - Use accessors x(), y() and z() from UVector3, instead of directly accessing
   its data-members.

 November 7, 2014  G.Cosmo               geom-bool-V10-00-09
 - Fixed Coverity defects in G4UMultiUnion::CreatePolyhedron() for
   memory leaks.

 October 3, 2014  G.Cosmo                geom-bool-V10-00-08
 - Avoid polyhedron deletion (and therefore mutexing) in CreatePolyhedron
   for G4DisplacedSolid, as not necessary.

 September 25, 2014  T.Nikitina          geom-bool-V10-00-07
 - Additional correction to G4UMultiUnion::CreatePolyhedron(), to take into
   account possible displacement of first component in the structure and have
   it visualised correctly.

 September 18, 2014  T.Nikitina          geom-bool-V10-00-06
 - Corrected implementation of CreatePolyhedron() in G4UMultiUnion wrapper.

 September 1, 2014  G.Cosmo              geom-bool-V10-00-05
 - Fixed use of polyhedron pointer, to avoid race condition in MT
   when parameterised volumes are visualised.

 Jul 18, 2014  G.Cosmo                   geom-bool-V10-00-04
 - G4UMultiUnion: correction in destructor to avoid deletion of polyhedron,
   as not owned by the structure.
   Corrected initialisation of base class name to adopt string provided as
   input parameter instead of hard-coded name.
   Adapted implementation of GetTransformation() to API correction in
   UMultiUnion. Requires co-working tag "geom-usolids-V10-00-12" with
   'usolids' module.

 Jul 04, 2014  G.Cosmo                   geom-bool-V10-00-03