@@ -20,6 +20,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+ August 13, 2015  G.Cosmo                geom-bool-V10-00-11
+ - Checked for potential never-ending loops. Replaced while-do loop with
+   bounded for-loop in G4IntersectionSolid::DistanceToIn(p,v).
+
  March 3, 2015  G.Cosmo                  geom-bool-V10-00-10
  - Use accessors x(), y() and z() from UVector3, instead of directly accessing
    its data-members.
